fixed button position bug
for some reason setting left: 275px threw the button over too far
in safari, so i instead used margin-left to shove the button
and that seemed to work in both browsers without issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ div#mainInput button {
 	padding: 5px;
 	margin: 0;
 	position: absolute;
-	left: 257px;
+	margin-left: 200px;
 	background-color: #67ADFF;
 	color: white;
 	border-top-right-radius: 10px;
